# auto-docs-action

./: .analysis_gitignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_SMELL_ANALYSIS.md  IMPLEMENTATION_NOTES.md  README.md  TESTING_STRATEGY.md  TODO.md  action.yml  ast_validator.py  debug_main.py  docstring_updater.py  file_processor.py  git_operations.py  main.py  main_simple.py  pyproject.toml  setup.cfg
.claude/: settings.local.json
.github/workflows/: test.yml
auto_docs_action/: __init__.py  __main__.py  app_constants.py  ast_validator.py  config.py  constants.py  docstring_updater.py  file_processor.py  git_helpers.py  git_operations.py  main.py  main_helpers.py
refactoring_examples/: README.md  function_decomposition.py  result_types.py  utilities.py
tests/: conftest.py  test_edge_cases.py  test_integration.py
tests/unit/: test_ast_validator.py  test_auto_docs_detection.py  test_docstring_updater.py  test_file_processor.py  test_git_operations.py  test_git_operations_clean.py
